samples/_failures_safe/1761534617_402dbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1507b9c.c: In function ‘main’:
./samples/SAFE/__tmp_d1507b9c.c:148:12: error: missing terminating " character
  148 |     printf("Enter text to tokenize (max
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d1507b9c.c:148:5: error: expected expression at end of input
  148 |     printf("Enter text to tokenize (max
      |     ^~~~~~
./samples/SAFE/__tmp_d1507b9c.c:148:5: error: expected declaration or statement at end of input
